--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,10 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./app:/app
+      - .:/app
+    working_dir: /app
+    environment:
+      - PYTHONPATH=/app
     networks:
       - app-network
 
